@startuml d1_normalized_minimal
!include _style.puml
title D1 — normalized-minimal

entity "charity" as c {
  * charity_id : BIGINT <<PK>>
  --
  * name : TEXT
  * country : TEXT
  * founded_on : DATE
}
entity "person" as p {
  * person_id : BIGINT <<PK>>
  --
  * charity_id : BIGINT <<FK>>
  * full_name : TEXT
  * email : TEXT
  * joined_at : TIMESTAMPTZ
}
entity "donation" as d {
  * donation_id : BIGINT <<PK>>
  --
  * person_id : BIGINT <<FK>>
  * amount_cents : BIGINT
  * currency : CHAR(3)
  * donated_at : TIMESTAMPTZ
  note : TEXT
}
c ||--o{ p
p ||--o{ d

note bottom of d
  **Indexes: the two primary keys, and nothing else.**

  PostgreSQL does not index a foreign key's
  referencing column for you. donation.person_id
  is therefore unindexed, so navigating from a
  person to their donations is a full scan of
  every donation in the database.

  This is the design you get by drawing the ER
  diagram and stopping. It is in the study as the
  honest floor, not as a strawman: it is a shape
  that reaches production regularly.
end note
@enduml
